--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,40 @@
+# --- 依赖与构建输出 ---
+# 极其庞大的插件库，由 npm install 自动生成
+node_modules/
+# 静态构建生成的文件夹（Cloudflare 会在云端生成它）
+build/
+# Docusaurus 运行时的缓存和元数据中心
 .docusaurus/
+
+# --- 操作系统临时文件 ---
+.DS_Store
+Thumbs.db
+desktop.ini
+
+# --- 日志文件 ---
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+.pnpm-debug.log*
+
+# --- 环境配置（如果以后涉及敏感 API Key） ---
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# --- 各种 IDE / 编辑器配置 ---
+.vscode/*
+!.vscode/extensions.json
+.idea/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# --- Docusaurus 特定排除 ---
+# 如果你使用了本地搜索插件且启用了本地索引缓存
+.cache-loader
