--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,12 @@
 # --- 依赖与构建输出 ---
 # 极其庞大的插件库，由 npm install 自动生成
-node_modules/
+/node_modules/
 # 静态构建生成的文件夹（Cloudflare 会在云端生成它）
-build/
+/build/
 # Docusaurus 运行时的缓存和元数据中心
-.docusaurus/
-
+/.docusaurus/
+# blog
+/blog
 # --- 操作系统临时文件 ---
 .DS_Store
 Thumbs.db
@@ -38,3 +39,4 @@ lerna-debug.log*
 # --- Docusaurus 特定排除 ---
 # 如果你使用了本地搜索插件且启用了本地索引缓存
 .cache-loader
+
