--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "@giscus/react": "^3.1.0",
     "@mdx-js/react": "^3.0.0",
     "clsx": "^2.0.0",
+    "image-size": "^2.0.2",
     "prism-react-renderer": "^2.3.0",
+    "probe-image-size": "^7.2.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "unist-util-visit": "^5.1.0"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^3.9.2",
